--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
 .App {
+  margin-top: 30%;
+}
+
+.App > section {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  border: 1px solid #D1DCE3;
+  width: 608px;
+  height: 389px;
+  margin: 0 auto;
+  background: rgba(209, 220, 227, 0.18);
+  border-radius: 4px;
+  box-sizing: border-box
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
